--- a/index.html
+++ b/index.html
@@ -1,23 +1,131 @@
 <!DOCTYPE html>
-<style>
-  /* netnet default bg */
-  body {
-    margin: 0;
-    background-image: linear-gradient(#515199a8 2px, transparent 1px),
-      linear-gradient(90deg, #515199a8 2px, transparent 1px);
-    background-size: 50px 50px;
-    position: relative;
-    z-index: 1;
-    overflow: hidden;
-  }
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sun Life Design Jam | Sofia Xu Portfolio</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to bottom right, #ffffff, #f6f1fb);
+      color: #333;
+      line-height: 1.7;
+      margin: 0;
+      padding: 0 1rem;
+    }
+    header {
+      padding: 2rem 0;
+      text-align: center;
+    }
+    h1 {
+      font-size: 2.5rem;
+      color: #5e2ca5;
+    }
+    h2 {
+      font-size: 1.8rem;
+      margin-top: 2rem;
+      color: #b388eb;
+    }
+    p, ul {
+      max-width: 800px;
+      margin: 1rem auto;
+    }
+    ul {
+      padding-left: 1.5rem;
+    }
+    .section {
+      padding: 2rem 0;
+      border-bottom: 1px solid #eee;
+    }
+    .tools, .team, .links {
+      display: flex;
+      justify-content: center;
+      gap: 1.5rem;
+      flex-wrap: wrap;
+    }
+    .tools span, .team span, .links a {
+      background: linear-gradient(to right, #f6f1fb, #ffe1f3);
+      padding: 0.5rem 1rem;
+      border-radius: 20px;
+      font-weight: bold;
+      color: #5e2ca5;
+      text-decoration: none;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+    .links a:hover {
+      background: linear-gradient(to right, #d9c9ff, #ffe1f3);
+      color: #4e1b9a;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Sun Life Design Jam: Financial Literacy Made Fun</h1>
+    <p><strong>Design Sprint | 48 Hours | Team-Based</strong></p>
+  </header>
 
-  body::before {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    width: 100vw;
-    height: 100vh;
-    background: linear-gradient(0deg, #c76ebca8, #515199a8);
-  }
-</style>
-    
+  <section class="section">
+    <h2>🔍 The Challenge</h2>
+    <p>How might we help young adults find, engage in, and actually use financial tools and education?</p>
+    <p>Many people feel overwhelmed by financial information. We wanted to simplify this learning journey using behavioural insights and interactive design.</p>
+  </section>
+
+  <section class="section">
+    <h2>💡 The Solution</h2>
+    <p>We created a gamified mobile app where users nurture a virtual pet by completing short, personalized lessons about budgeting, credit, and saving.</p>
+    <ul>
+      <li>🎮 Choose a virtual pet</li>
+      <li>📘 Learn through quizzes and lessons</li>
+      <li>🏆 Earn rewards for progress</li>
+      <li>💬 Connect with peers</li>
+    </ul>
+  </section>
+
+  <section class="section">
+    <h2>🧠 Applying the EAST Framework</h2>
+    <ul>
+      <li><strong>Easy:</strong> Clear UI, no jargon, step-by-step</li>
+      <li><strong>Attractive:</strong> Cute pets, gamification, rewards</li>
+      <li><strong>Social:</strong> Peer progress boards, share features</li>
+      <li><strong>Timely:</strong> Nudges tied to real-life events and paydays</li>
+    </ul>
+  </section>
+
+  <section class="section">
+    <h2>🎨 UX & Visual Design</h2>
+    <p>We used a cozy, clean visual style and fun illustrations to make learning approachable. Lessons adapt based on users' prior knowledge to reduce overwhelm.</p>
+    <div style="display: flex; flex-direction: column; align-items: center; gap: 2rem; margin-top: 2rem;">
+  <img src="sunlife-screen.png" alt="Sun Life App Screens" style="width: 100%; max-width: 900px; border-radius: 16px; box-shadow: 0 2px 12px rgba(0,0,0,0.15);">
+  <img src="sunlife-wireframe.png" alt="Sun Life Wireframes" style="width: 100%; max-width: 900px; border-radius: 16px; box-shadow: 0 2px 12px rgba(0,0,0,0.15);">
+</div>
+  </section>
+
+  <section class="section">
+    <h2>🛠️ Tools Used</h2>
+    <div class="tools">
+      <span>Figma</span>
+      <span>Illustrator</span>
+      <span>Miro</span>
+      <span>Behavioural Research</span>
+    </div>
+  </section>
+
+  <section class="section">
+    <h2>👩🏻‍💻 My Role</h2>
+    <p>I worked on the user flow, UI/UX prototyping, visual storytelling, and EAST integration. I also helped ideate how gamification could enhance engagement.</p>
+  </section>
+
+  <section class="section">
+    <h2>✨ Reflections</h2>
+    <p>This project taught me how to translate behavioural insights into user experiences that feel genuinely helpful and delightful. I loved working across disciplines to bring something truly human-centered to life.</p>
+  </section>
+
+  <section class="section">
+    <h2>🔗 Links</h2>
+    <div class="links">
+      <a href="#">View Prototype</a>
+      <a href="#">Back to Portfolio</a>
+    </div>
+  </section>
+</body>
+</html>
