uploaded some pictures

--- a/index.html
+++ b/index.html
@@ -92,13 +92,43 @@
   </section>
 
   <section class="section">
-    <h2>🎨 UX & Visual Design</h2>
-    <p>We used a cozy, clean visual style and fun illustrations to make learning approachable. Lessons adapt based on users' prior knowledge to reduce overwhelm.</p>
-    <div style="display: flex; flex-direction: column; align-items: center; gap: 2rem; margin-top: 2rem;">
-  <img src="sunlife-screen.png" alt="Sun Life App Screens" style="width: 100%; max-width: 900px; border-radius: 16px; box-shadow: 0 2px 12px rgba(0,0,0,0.15);">
-  <img src="sunlife-wireframe.png" alt="Sun Life Wireframes" style="width: 100%; max-width: 900px; border-radius: 16px; box-shadow: 0 2px 12px rgba(0,0,0,0.15);">
-</div>
-  </section>
+  <h2>👥 User Personas</h2>
+  <p>We focused on two key personas to guide our user-centered design approach:</p>
+  <ul>
+    <li><strong>Maria:</strong> A 33-year-old software engineer who recently started her first job. She faces student debt, credit card challenges, and anxiety around financial management. She needs simple tools, friendly guidance, and a low-barrier way to start saving and learning.</li>
+    <li><strong>Alex:</strong> A 24-year-old marketing intern just beginning his career. He is interested in investing but lacks foundational knowledge and feels overwhelmed by the complexity of available tools. He needs confidence-building support and beginner-friendly education.</li>
+  </ul>
+
+  <div style="display: flex; flex-direction: column; align-items: center; gap: 2rem; margin-top: 2rem;">
+    <img src="Persona.png" alt="Persona - Maria" style="width: 100%; max-width: 700px; border-radius: 16px; box-shadow: 0 2px 12px rgba(0,0,0,0.15);">
+    <img src="Persona 2.png" alt="Persona - Alex" style="width: 100%; max-width: 700px; border-radius: 16px; box-shadow: 0 2px 12px rgba(0,0,0,0.15);">
+  </div>
+</section>
+
+<section class="section">
+  <h2>🎨 UX & Visual Design</h2>
+  <p>Our design process was structured across four key phases: discovery, ideation, prototyping, and testing. We prioritized clarity, emotional connection, and behavioral design at every step.</p>
+
+  <h3>📌 Discovery Phase</h3>
+  <p>We began by analyzing common financial literacy pain points, reviewing competitor apps, and identifying emotional blockers like fear and information overload. Using the EAST framework as our foundation, we set out to create a more motivating, playful alternative.</p>
+
+  <h3>🧠 Ideation Phase</h3>
+  <p>We generated a variety of low-fidelity wireframes that explored gamification, habit-building, and emotional reinforcement through virtual companions. From the start, we knew we wanted to balance education with joy — so users would feel excited to return.</p>
+
+  <div style="display: flex; flex-direction: column; align-items: center; gap: 2rem; margin-top: 2rem;">
+    <img src="sunlife-wireframe.png" alt="Sun Life Wireframes" style="width: 100%; max-width: 900px; border-radius: 16px; box-shadow: 0 2px 12px rgba(0,0,0,0.15);">
+  </div>
+
+  <h3>🧪 Prototyping Phase</h3>
+  <p>We built a clickable high-fidelity prototype featuring a warm, earthy color palette and friendly UI. The layout was intentionally simple, with clearly labeled progress paths, daily goals, and options to grow a customizable financial buddy pet.</p>
+
+  <div style="display: flex; flex-direction: column; align-items: center; gap: 2rem; margin-top: 2rem;">
+    <img src="sunlife-screen.png" alt="Sun Life App Screens" style="width: 100%; max-width: 900px; border-radius: 16px; box-shadow: 0 2px 12px rgba(0,0,0,0.15);">
+  </div>
+
+  <h3>🔁 Testing & Feedback</h3>
+  <p>We received encouraging feedback that users appreciated the gentle tone, gamified reward system, and pet customization. Our app reduced the cognitive load of traditional finance apps by making learning feel casual and even fun.</p>
+</section>
 
   <section class="section">
     <h2>🛠️ Tools Used</h2>
