--- a/index.html
+++ b/index.html
@@ -11,39 +11,62 @@
       color: #333;
       line-height: 1.7;
       margin: 0;
-      padding: 0 1rem;
+      padding: 0;
     }
     header {
-      padding: 2rem 0;
+      padding: 2rem 1rem;
       text-align: center;
+      background: linear-gradient(to right, #f6f1fb, #ffe1f3);
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
     }
     h1 {
       font-size: 2.5rem;
       color: #5e2ca5;
+      margin-bottom: 0.5rem;
     }
     h2 {
       font-size: 1.8rem;
-      margin-top: 2rem;
       color: #b388eb;
     }
-    p, ul {
-      max-width: 800px;
-      margin: 1rem auto;
+    h3 {
+      color: #7c4dcc;
+      margin-top: 2rem;
+    }
+    .container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 2rem;
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 2rem 1rem;
+    }
+    .section {
+      background: white;
+      border-radius: 16px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.06);
+      padding: 2rem;
+      margin-bottom: 2rem;
+      transition: transform 0.3s ease;
+    }
+    .section:hover {
+      transform: translateY(-4px);
+    }
+    .section img {
+      width: 100%;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     }
     ul {
       padding-left: 1.5rem;
     }
-    .section {
-      padding: 2rem 0;
-      border-bottom: 1px solid #eee;
-    }
-    .tools, .team, .links {
+    .tools, .links {
       display: flex;
       justify-content: center;
-      gap: 1.5rem;
+      gap: 1rem;
       flex-wrap: wrap;
+      margin-top: 1rem;
     }
-    .tools span, .team span, .links a {
+    .tools span, .links a {
       background: linear-gradient(to right, #f6f1fb, #ffe1f3);
       padding: 0.5rem 1rem;
       border-radius: 20px;
@@ -64,98 +87,89 @@
     <p><strong>Design Sprint | 48 Hours | Team-Based</strong></p>
   </header>
 
-  <section class="section">
-    <h2>🔍 The Challenge</h2>
-    <p>How might we help young adults find, engage in, and actually use financial tools and education?</p>
-    <p>Many people feel overwhelmed by financial information. We wanted to simplify this learning journey using behavioural insights and interactive design.</p>
-  </section>
-
-  <section class="section">
-    <h2>💡 The Solution</h2>
-    <p>We created a gamified mobile app where users nurture a virtual pet by completing short, personalized lessons about budgeting, credit, and saving.</p>
-    <ul>
-      <li>🎮 Choose a virtual pet</li>
-      <li>📘 Learn through quizzes and lessons</li>
-      <li>🏆 Earn rewards for progress</li>
-      <li>💬 Connect with peers</li>
-    </ul>
-  </section>
-
-  <section class="section">
-    <h2>🧠 Applying the EAST Framework</h2>
-    <ul>
-      <li><strong>Easy:</strong> Clear UI, no jargon, step-by-step</li>
-      <li><strong>Attractive:</strong> Cute pets, gamification, rewards</li>
-      <li><strong>Social:</strong> Peer progress boards, share features</li>
-      <li><strong>Timely:</strong> Nudges tied to real-life events and paydays</li>
-    </ul>
-  </section>
-
-  <section class="section">
-  <h2>👥 User Personas</h2>
-  <p>We focused on two key personas to guide our user-centered design approach:</p>
-  <ul>
-    <li><strong>Maria:</strong> A 33-year-old software engineer who recently started her first job. She faces student debt, credit card challenges, and anxiety around financial management. She needs simple tools, friendly guidance, and a low-barrier way to start saving and learning.</li>
-    <li><strong>Alex:</strong> A 24-year-old marketing intern just beginning his career. He is interested in investing but lacks foundational knowledge and feels overwhelmed by the complexity of available tools. He needs confidence-building support and beginner-friendly education.</li>
-  </ul>
-
-  <div style="display: flex; flex-direction: column; align-items: center; gap: 2rem; margin-top: 2rem;">
-    <img src="Persona.png" alt="Persona - Maria" style="width: 100%; max-width: 700px; border-radius: 16px; box-shadow: 0 2px 12px rgba(0,0,0,0.15);">
-    <img src="Persona 2.png" alt="Persona - Alex" style="width: 100%; max-width: 700px; border-radius: 16px; box-shadow: 0 2px 12px rgba(0,0,0,0.15);">
-  </div>
-</section>
-
-<section class="section">
-  <h2>🎨 UX & Visual Design</h2>
-  <p>Our design process was structured across four key phases: discovery, ideation, prototyping, and testing. We prioritized clarity, emotional connection, and behavioral design at every step.</p>
-
-  <h3>📌 Discovery Phase</h3>
-  <p>We began by analyzing common financial literacy pain points, reviewing competitor apps, and identifying emotional blockers like fear and information overload. Using the EAST framework as our foundation, we set out to create a more motivating, playful alternative.</p>
-
-  <h3>🧠 Ideation Phase</h3>
-  <p>We generated a variety of low-fidelity wireframes that explored gamification, habit-building, and emotional reinforcement through virtual companions. From the start, we knew we wanted to balance education with joy — so users would feel excited to return.</p>
-
-  <div style="display: flex; flex-direction: column; align-items: center; gap: 2rem; margin-top: 2rem;">
-    <img src="sunlife-wireframe.png" alt="Sun Life Wireframes" style="width: 100%; max-width: 900px; border-radius: 16px; box-shadow: 0 2px 12px rgba(0,0,0,0.15);">
-  </div>
-
-  <h3>🧪 Prototyping Phase</h3>
-  <p>We built a clickable high-fidelity prototype featuring a warm, earthy color palette and friendly UI. The layout was intentionally simple, with clearly labeled progress paths, daily goals, and options to grow a customizable financial buddy pet.</p>
-
-  <div style="display: flex; flex-direction: column; align-items: center; gap: 2rem; margin-top: 2rem;">
-    <img src="sunlife-screen.png" alt="Sun Life App Screens" style="width: 100%; max-width: 900px; border-radius: 16px; box-shadow: 0 2px 12px rgba(0,0,0,0.15);">
-  </div>
-
-  <h3>🔁 Testing & Feedback</h3>
-  <p>We received encouraging feedback that users appreciated the gentle tone, gamified reward system, and pet customization. Our app reduced the cognitive load of traditional finance apps by making learning feel casual and even fun.</p>
-</section>
-
-  <section class="section">
-    <h2>🛠️ Tools Used</h2>
-    <div class="tools">
-      <span>Figma</span>
-      <span>Illustrator</span>
-      <span>Miro</span>
-      <span>Behavioural Research</span>
+  <div class="container">
+    <div class="section">
+      <h2>🔍 The Challenge</h2>
+      <p>How might we help young adults find, engage in, and actually use financial tools and education?</p>
+      <p>Many people feel overwhelmed by financial information. We wanted to simplify this learning journey using behavioural insights and interactive design.</p>
     </div>
-  </section>
 
-  <section class="section">
-    <h2>👩🏻‍💻 My Role</h2>
-    <p>I worked on the user flow, UI/UX prototyping, visual storytelling, and EAST integration. I also helped ideate how gamification could enhance engagement.</p>
-  </section>
-
-  <section class="section">
-    <h2>✨ Reflections</h2>
-    <p>This project taught me how to translate behavioural insights into user experiences that feel genuinely helpful and delightful. I loved working across disciplines to bring something truly human-centered to life.</p>
-  </section>
-
-  <section class="section">
-    <h2>🔗 Links</h2>
-    <div class="links">
-      <a href="#">View Prototype</a>
-      <a href="#">Back to Portfolio</a>
+    <div class="section">
+      <h2>💡 The Solution</h2>
+      <p>We created a gamified mobile app where users nurture a virtual pet by completing short, personalized lessons about budgeting, credit, and saving.</p>
+      <ul>
+        <li>🎮 Choose a virtual pet</li>
+        <li>📘 Learn through quizzes and lessons</li>
+        <li>🏆 Earn rewards for progress</li>
+        <li>💬 Connect with peers</li>
+      </ul>
     </div>
-  </section>
+
+    <div class="section">
+      <h2>🧠 Applying the EAST Framework</h2>
+      <ul>
+        <li><strong>Easy:</strong> Clear UI, no jargon, step-by-step</li>
+        <li><strong>Attractive:</strong> Cute pets, gamification, rewards</li>
+        <li><strong>Social:</strong> Peer progress boards, share features</li>
+        <li><strong>Timely:</strong> Nudges tied to real-life events and paydays</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>👥 User Personas</h2>
+      <p>We focused on two key personas to guide our user-centered design approach:</p>
+      <ul>
+        <li><strong>Maria:</strong> A 33-year-old software engineer who recently started her first job. She faces student debt, credit card challenges, and anxiety around financial management.</li>
+        <li><strong>Alex:</strong> A 24-year-old marketing intern just beginning his career. He is interested in investing but lacks foundational knowledge and feels overwhelmed by complex tools.</li>
+      </ul>
+      <img src="Persona.png" alt="Persona - Maria">
+      <img src="Persona 2.png" alt="Persona - Alex">
+    </div>
+
+    <div class="section">
+      <h2>🎨 UX & Visual Design</h2>
+      <h3>📌 Discovery Phase</h3>
+      <p>We analyzed pain points, competitor apps, and blockers like fear and info overload. The EAST framework shaped our strategic direction.</p>
+
+      <h3>🧠 Ideation Phase</h3>
+      <p>Low-fi wireframes explored gamification, habits, and pets to make finance fun and emotionally engaging.</p>
+      <img src="sunlife-wireframe.png" alt="Wireframe">
+
+      <h3>🧪 Prototyping Phase</h3>
+      <p>We created a polished app using a warm color palette, gamified tasks, and customizable pet companions.</p>
+      <img src="sunlife-screen.png" alt="High Fidelity Screens">
+
+      <h3>🔁 Testing & Feedback</h3>
+      <p>Users praised the approachable design and gamification. Feedback confirmed that the experience reduced stress around finances.</p>
+    </div>
+
+    <div class="section">
+      <h2>🛠️ Tools Used</h2>
+      <div class="tools">
+        <span>Figma</span>
+        <span>Illustrator</span>
+        <span>Miro</span>
+        <span>Behavioural Research</span>
+      </div>
+    </div>
+
+    <div class="section">
+      <h2>👩🏻‍💻 My Role</h2>
+      <p>I worked on the user flow, UI/UX prototyping, visual storytelling, and EAST integration. I also helped ideate how gamification could enhance engagement.</p>
+    </div>
+
+    <div class="section">
+      <h2>✨ Reflections</h2>
+      <p>This project taught me how to translate behavioural insights into user experiences that feel genuinely helpful and delightful. I loved working across disciplines to bring something truly human-centered to life.</p>
+    </div>
+
+    <div class="section">
+      <h2>🔗 Links</h2>
+      <div class="links">
+        <a href="#">View Prototype</a>
+        <a href="#">Back to Portfolio</a>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
