--- a/index.html
+++ b/index.html
@@ -51,13 +51,26 @@
     .section:hover {
       transform: translateY(-4px);
     }
-    .section img {
-      width: 100%;
+    .full-width-section {
+      max-width: 100%;
+      padding: 3rem 10vw;
+      background: white;
+      margin-bottom: 3rem;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+    }
+    .persona-images {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 2rem;
+      margin-top: 2rem;
+    }
+    .persona-images img {
+      width: auto;
+      max-width: 48%;
+      height: auto;
       border-radius: 12px;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    }
-    ul {
-      padding-left: 1.5rem;
     }
     .tools, .links {
       display: flex;
@@ -78,6 +91,14 @@
     .links a:hover {
       background: linear-gradient(to right, #d9c9ff, #ffe1f3);
       color: #4e1b9a;
+    }
+    .full-width-section img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin: 2rem auto;
+      border-radius: 12px;
+      box-shadow: 0 2px 12px rgba(0,0,0,0.15);
     }
   </style>
 </head>
@@ -114,35 +135,39 @@
         <li><strong>Timely:</strong> Nudges tied to real-life events and paydays</li>
       </ul>
     </div>
+  </div>
 
-    <div class="section">
-      <h2>👥 User Personas</h2>
-      <p>We focused on two key personas to guide our user-centered design approach:</p>
-      <ul>
-        <li><strong>Maria:</strong> A 33-year-old software engineer who recently started her first job. She faces student debt, credit card challenges, and anxiety around financial management.</li>
-        <li><strong>Alex:</strong> A 24-year-old marketing intern just beginning his career. He is interested in investing but lacks foundational knowledge and feels overwhelmed by complex tools.</li>
-      </ul>
+  <div class="full-width-section">
+    <h2>👥 User Personas</h2>
+    <p>We focused on two key personas to guide our user-centered design approach:</p>
+    <ul>
+      <li><strong>Maria:</strong> A 33-year-old software engineer who recently started her first job. She faces student debt, credit card challenges, and anxiety around financial management.</li>
+      <li><strong>Alex:</strong> A 24-year-old marketing intern just beginning his career. He is interested in investing but lacks foundational knowledge and feels overwhelmed by complex tools.</li>
+    </ul>
+    <div class="persona-images">
       <img src="Persona.png" alt="Persona - Maria">
       <img src="Persona 2.png" alt="Persona - Alex">
     </div>
+  </div>
 
-    <div class="section">
-      <h2>🎨 UX & Visual Design</h2>
-      <h3>📌 Discovery Phase</h3>
-      <p>We analyzed pain points, competitor apps, and blockers like fear and info overload. The EAST framework shaped our strategic direction.</p>
+  <div class="full-width-section">
+    <h2>🎨 UX & Visual Design</h2>
+    <h3>📌 Discovery Phase</h3>
+    <p>We analyzed pain points, competitor apps, and blockers like fear and info overload. The EAST framework shaped our strategic direction.</p>
 
-      <h3>🧠 Ideation Phase</h3>
-      <p>Low-fi wireframes explored gamification, habits, and pets to make finance fun and emotionally engaging.</p>
-      <img src="sunlife-wireframe.png" alt="Wireframe">
+    <h3>🧠 Ideation Phase</h3>
+    <p>Low-fi wireframes explored gamification, habits, and pets to make finance fun and emotionally engaging.</p>
+    <img src="sunlife-wireframe.png" alt="Wireframe">
 
-      <h3>🧪 Prototyping Phase</h3>
-      <p>We created a polished app using a warm color palette, gamified tasks, and customizable pet companions.</p>
-      <img src="sunlife-screen.png" alt="High Fidelity Screens">
+    <h3>🧪 Prototyping Phase</h3>
+    <p>We created a polished app using a warm color palette, gamified tasks, and customizable pet companions.</p>
+    <img src="sunlife-screen.png" alt="High Fidelity Screens">
 
-      <h3>🔁 Testing & Feedback</h3>
-      <p>Users praised the approachable design and gamification. Feedback confirmed that the experience reduced stress around finances.</p>
-    </div>
+    <h3>🔁 Testing & Feedback</h3>
+    <p>Users praised the approachable design and gamification. Feedback confirmed that the experience reduced stress around finances.</p>
+  </div>
 
+  <div class="container">
     <div class="section">
       <h2>🛠️ Tools Used</h2>
       <div class="tools">
