--- a/index.html
+++ b/index.html
@@ -5,13 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sun Life Design Jam | Sofia Xu Portfolio</title>
   <style>
-    :root {
-      --light-pink: #ffe8f2;
-      --soft-blue: #e3f3ff;
-      --light-lavender: #f2f0ff;
-      --accent: #dab6e7;
-      --text: #333;
-    }
     body {
       font-family: 'Segoe UI', sans-serif;
       background: linear-gradient(to bottom right, #ffffff, #f6f1fb);
@@ -20,20 +13,25 @@
       margin: 0;
       padding: 0;
     }
+
     header {
-      background: rgba(255, 255, 255, 0.9);
-      padding: 1.5rem;
+      position: sticky;
+      top: 0;
+      background: linear-gradient(to right, #f6f1fb, #ffe1f3);
+      padding: 1rem 2rem;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.03);
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+      z-index: 1000;
     }
+
     header h1 {
       font-size: 1.8rem;
-      font-weight: 700;
-      color: var(--text);
+      color: #5e2ca5;
       margin: 0;
     }
+
     nav a {
       margin-left: 1rem;
       color: #666;
@@ -41,17 +39,21 @@
       font-weight: 500;
       transition: color 0.3s ease;
     }
+
     nav a:hover {
-      color: var(--accent);
+      color: #5e2ca5;
     }
+
     h2 {
       font-size: 1.8rem;
       color: #b388eb;
     }
+
     h3 {
       color: #7c4dcc;
       margin-top: 2rem;
     }
+
     .container {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -60,6 +62,7 @@
       margin: 0 auto;
       padding: 2rem 1rem;
     }
+
     .section {
       background: white;
       border-radius: 16px;
@@ -68,9 +71,11 @@
       margin-bottom: 2rem;
       transition: transform 0.3s ease;
     }
+
     .section:hover {
       transform: translateY(-4px);
     }
+
     .full-width-section {
       max-width: 100%;
       padding: 3rem 10vw;
@@ -78,16 +83,19 @@
       margin-bottom: 3rem;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
     }
+
     .persona-images {
       display: grid;
       grid-template-columns: 1fr 1fr;
       gap: 2rem;
       margin-top: 2rem;
     }
+
     .persona-container {
       position: relative;
       overflow: hidden;
     }
+
     .persona-container span {
       position: absolute;
       bottom: 0;
@@ -100,9 +108,11 @@
       font-size: 1.1rem;
       transition: background 0.3s ease;
     }
+
     .persona-container:hover span {
       background: rgba(0, 0, 0, 0.8);
     }
+
     .persona-container img {
       width: 100%;
       height: auto;
@@ -112,18 +122,35 @@
       cursor: pointer;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
+
     .persona-container img:hover {
       transform: scale(1.05);
       box-shadow: 0 4px 16px rgba(0, 0, 0, 0.15);
     }
-    .tools, .links {
+
+    .tools {
       display: flex;
       justify-content: center;
       gap: 1rem;
       flex-wrap: wrap;
       margin-top: 1rem;
     }
-    .tools span, .links a {
+
+    .tools img {
+      width: 60px;
+      height: 60px;
+      border-radius: 10px;
+      background: white;
+      padding: 0.5rem;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s ease;
+    }
+
+    .tools img:hover {
+      transform: scale(1.1);
+    }
+
+    .links a {
       background: linear-gradient(to right, #f6f1fb, #ffe1f3);
       padding: 0.5rem 1rem;
       border-radius: 20px;
@@ -132,10 +159,12 @@
       text-decoration: none;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
+
     .links a:hover {
       background: linear-gradient(to right, #d9c9ff, #ffe1f3);
       color: #4e1b9a;
     }
+
     .full-width-section img {
       max-width: 100%;
       height: auto;
@@ -146,6 +175,7 @@
       transition: transform 0.3s ease, box-shadow 0.3s ease;
       cursor: pointer;
     }
+
     .full-width-section img:hover {
       transform: scale(1.02);
       box-shadow: 0 4px 16px rgba(0,0,0,0.2);
@@ -156,10 +186,10 @@
   <header>
     <h1>Sofia Xu</h1>
     <nav>
-      <a href="/">Home</a>
-      <a href="/#portfolio">Portfolio</a>
-      <a href="/#projects">Projects</a>
-      <a href="/#contact">Contact</a>
+      <a href="#about">About</a>
+      <a href="#portfolio">Portfolio</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
     </nav>
   </header>
 
@@ -208,19 +238,16 @@
   </div>
 
   <div class="full-width-section">
-    <h2>🎨 UX &amp; Visual Design</h2>
+    <h2>🎨 UX & Visual Design</h2>
     <h3>📌 Discovery Phase</h3>
     <p>We analyzed pain points, competitor apps, and blockers like fear and info overload. The EAST framework shaped our strategic direction.</p>
-
     <h3>🧠 Ideation Phase</h3>
     <p>Low-fi wireframes explored gamification, habits, and pets to make finance fun and emotionally engaging.</p>
     <img src="sunlife-wireframe.png" alt="Wireframe">
-
     <h3>🧪 Prototyping Phase</h3>
     <p>We created a polished app using a warm color palette, gamified tasks, and customizable pet companions.</p>
     <img src="sunlife-screen.png" alt="High Fidelity Screens">
-
-    <h3>🔁 Testing &amp; Feedback</h3>
+    <h3>🔁 Testing & Feedback</h3>
     <p>Users praised the approachable design and gamification. Feedback confirmed that the experience reduced stress around finances.</p>
   </div>
 
@@ -228,10 +255,8 @@
     <div class="section">
       <h2>🛠️ Tools Used</h2>
       <div class="tools">
-        <span>Figma</span>
-        <span>Illustrator</span>
-        <span>Miro</span>
-        <span>Behavioural Research</span>
+        <img src="figma.png" alt="Figma">
+        <img src="photoshop.png" alt="Photoshop">
       </div>
     </div>
 
@@ -245,13 +270,7 @@
       <p>This project taught me how to translate behavioural insights into user experiences that feel genuinely helpful and delightful. I loved working across disciplines to bring something truly human-centered to life.</p>
     </div>
 
-    <div class="section">
-      <h2>🔗 Links</h2>
-      <div class="links">
-        <a href="#">View Prototype</a>
-        <a href="#">Back to Portfolio</a>
-      </div>
-    </div>
+    
   </div>
 
   <script>
