delete project page

--- a/index.html
+++ b/index.html
@@ -184,13 +184,16 @@
 </head>
 <body>
   <header>
-    <h1>Sofia Xu</h1>
+    <h1>Sun Life Design Jam: Financial Literacy Made Fun</h1>
     <nav>
       <a href="#about">About</a>
       <a href="#portfolio">Portfolio</a>
-      <a href="#projects">Projects</a>
       <a href="#contact">Contact</a>
     </nav>
+  </header>
+  
+    <header>
+    <p><strong>Design Sprint | 48 Hours | Team-Based</strong></p>
   </header>
 
   <div class="container">
