--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
   <header>
     <h1>Sun Life Design Jam: Financial Literacy Made Fun</h1>
     <nav>
-      <a href="#about">About</a>
+      <a href="https://soifa.github.io/sofia-portfolio/#about">About</a>
       <a href="#portfolio">Portfolio</a>
       <a href="#contact">Contact</a>
     </nav>
